tests/negative/call_wrong_type_args.fc
// test: call-with-wrong-type-of-arguments-test
// compile-fail: true

int write(int _);
void exit(int _);

int foo(int a, int b){
    return a * b;
}

void main(){
    int res = foo(10, true);
    write(res);
    exit(0);
}